Ticket #1930: Cleaning up fact-checking log, fixed spacing issues, fixed height on the log with scrolling, instagram icon fix, and removing textures.

--- a/drupal/sites/all/themes/checkdesk/assets/scss/replace_ctb/_mixins.scss
+++ b/drupal/sites/all/themes/checkdesk/assets/scss/replace_ctb/_mixins.scss
@@ -542,6 +542,8 @@
 @mixin ctb-load-more-pager {
   .pager-load-more {
       @include ctb-clearfix;
+      @include reset-list-style;
+      padding: $absolute-line-height/2 0;
       float: none;
       clear: both;
       position: relative;
